# toy_atm

./: Cargo.toml  README.md
proptest-regressions/accounting/: atm.txt
src/: accounting.rs  main.rs
src/accounting/: atm.rs  common.rs  transaction.rs
