[package]
name = "toy_atm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1.13", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }


[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"